src/deployment/prometheus-ingress.yaml
## Nginx Ingress

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: monitoring/basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'The password can be found in the AWS secrets manager under prometheus/basic-auth/password'
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.${INGRESS_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 8080
